# wlan-cloud-ucentralgw

./: .clang-format  .gitignore  BUILDING.md  CERTIFICATES.md  CHANGELOG.md  CLI.md  CMakeLists.txt  CODING_STYLE.md  COMMERCIAL-LICENSE  CONFIGURATION.md  CONTRINUTING.md  Dockerfile  FindMySQL.cmake  Introduction.pptx  KAFKA.md  LICENSE  MICRO_SERVICE_PROTOCOL.md  NOTICE  OPENAPI.md  PROTOCOL.md  README.md  RESTRICTED_DEVICES.md  TEST_CURL.md  TEST_PYTHON.md  THEBASICS.md  build-ucentralgw.sh  buildaws  buildit  conanfile.txt  config.yaml  docker-entrypoint.sh  docker_build.sh  docker_clean.sh  docker_run.sh  ipk-req.json  ipk-resp.json  main.cpp  owgw.properties  owgw.properties.tmpl  owgw.service  (+18 more)
.github/workflows/: ci.yaml  ci.yml  cleanup.yml  compose.yml  docker-compose.yml  enforce-jira-issue-key.yml  openapi-pages.yml  release.yml
ap_scripts/: README.md
ap_scripts/Author 1/: content.yaml
ap_scripts/script1/: README.md  scripts1.sh
ap_scripts/script2/: README.md  script2.bundle
capabilities/: edgecore_eap101.json  edgecore_eap102.json  edgecore_ecw5211.json  edgecore_ecw5410.json  edgecore_spw2ac1200-lan-poe.json  edgecore_spw2ac1200.json  edgecore_sswac2600.json  linksys_ea6350-v4.json  linksys_ea8300.json  wallys_dr40x9.json
cert_scripts/: clean.sh  create_certificates.sh  dev-1-cert.pem  dev-10-cert.pem  dev-2-cert.pem  dev-3-cert.pem  dev-4-cert.pem  dev-5-cert.pem  dev-6-cert.pem  dev-7-cert.pem  dev-8-cert.pem  dev-9-cert.pem  more_devices.sh  server-cert.pem  server-key.pem
certificates/: clientcas.pem  issuer.pem  root.pem
cmake/: CppKafkaConfig.cmake  FindRdKafka.cmake
datamodel/: ucentral.schema.full.json
docker-compose/: .env  .env_kafka  .env_mysql  .env_postgresql  .env_ucentralgw  .env_ucentralgw-ui  .env_ucentralsec  add-ca-cert.sh  docker-compose.yml  init-ucentralsec-db.sh
docker-compose/certs/: restapi-cert.pem  restapi-key.pem  websocket-cert.pem  websocket-key.pem
docker-compose/rttys/: rttys.conf
docker-compose/ucentral-data/: ucentral.properties
docker-compose/ucentralgw-data/: ucentralgw.properties
docker-compose/ucentralsec-data/: ucentralsec.properties
docs/: index.html
docs/tmp-docs/: index.html
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _config.tpl  _helpers.tpl  confimap-config.yaml  deployment.yaml  ingress.yaml  job-create-kafka-topics.yaml  psp.yaml  pvc.yaml  role.yaml  rolebinding.yaml  secret-certs-cas.yaml  secret-certs.yaml  secret-config.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
issues/: OWGW Logs.txt  OWLS Logs.rtf  OWLS Logs.txt  WIFI-11388.txt
ols_samples/: sample1.json
openapi/: owgw.yaml
openapi/tip/: adoption-metrics-service-openapi.yaml  alarm-service-openapi.yaml  client-service-openapi.yaml  cloud-event-dispatcher-service-openapi.yaml  equipment-gateway-service-openapi.yaml  equipment-service-openapi.yaml  firmware-service-openapi.yaml  portal-services-openapi.yaml  portaluser-service-openapi.yaml  profile-service-openapi.yaml  routing-service-openapi.yaml  service-metric-service-openapi.yaml  status-service-openapi.yaml  system-event-service-openapi.yaml
openapi/ucentral/: owgw.yaml  ucentral.yaml
pcap/: radius  radius.pcapng
regulatory/: regulatory.txt
rtty_ui/: index.html
rtty_ui/css/: app.0e046291.css  chunk-vendors.b221ddbd.css
rtty_ui/js/: app.79bf330a.js  chunk-vendors.7fd2577a.js
src/: ALBHealthCheckServer.h  APIServers.cpp  AP_WS_ConfigAutoUpgrader.cpp  AP_WS_ConfigAutoUpgrader.h  AP_WS_Connection.cpp  AP_WS_Connection.h  AP_WS_Locked_Session.h  AP_WS_LookForUpgrade.cpp  AP_WS_Process_alarm.cpp  AP_WS_Process_cfgpending.cpp  AP_WS_Process_connect.cpp  AP_WS_Process_crashlog.cpp  AP_WS_Process_deviceupdate.cpp  AP_WS_Process_event.cpp  AP_WS_Process_healthcheck.cpp  AP_WS_Process_log.cpp  AP_WS_Process_packagelist.cpp  AP_WS_Process_ping.cpp  AP_WS_Process_rebootLog.cpp  AP_WS_Process_recovery.cpp  AP_WS_Process_state.cpp  AP_WS_Process_telemetry.cpp  AP_WS_Process_venuebroadcast.cpp  AP_WS_Process_wifiscan.cpp  AP_WS_ReactorPool.h  AP_WS_Reactor_Pool.h  AP_WS_Server.cpp  AP_WS_Server.h  AP_restrictions.h  AuthClient.cpp  AuthClient.h  AuthService.cpp  AuthService.h  AwsNLBHealthCheck.cpp  AwsNLBHealthCheck.h  CallbackManager.cpp  CallbackManager.h  CapabilitiesCache.h  CentralConfig.cpp  CentralConfig.h  (+245 more)
src/RESTAPI/: RESTAPI_GWobjects.cpp  RESTAPI_InternalServer.cpp  RESTAPI_InternalServer.h  RESTAPI_RPC.cpp  RESTAPI_RPC.h  RESTAPI_Routers.cpp  RESTAPI_SecurityObjects.cpp  RESTAPI_SecurityObjects.h  RESTAPI_TelemetryWebSocket.cpp  RESTAPI_TelemetryWebSocket.h  RESTAPI_blacklist.cpp  RESTAPI_blacklist.h  RESTAPI_blacklist_list.cpp  RESTAPI_blacklist_list.h  RESTAPI_capabilities_handler.cpp  RESTAPI_capabilities_handler.h  RESTAPI_command.cpp  RESTAPI_command.h  RESTAPI_commands.cpp  RESTAPI_commands.h  RESTAPI_default_configuration.cpp  RESTAPI_default_configuration.h  RESTAPI_default_configurations.cpp  RESTAPI_default_configurations.h  RESTAPI_default_firmware.cpp  RESTAPI_default_firmware.h  RESTAPI_default_firmwares.cpp  RESTAPI_default_firmwares.h  RESTAPI_deviceDashboardHandler.cpp  RESTAPI_deviceDashboardHandler.h  RESTAPI_device_commandHandler.cpp  RESTAPI_device_commandHandler.h  RESTAPI_device_handler.cpp  RESTAPI_device_handler.h  RESTAPI_device_helper.h  RESTAPI_devices_handler.cpp  RESTAPI_devices_handler.h  RESTAPI_file.cpp  RESTAPI_file.h  RESTAPI_iptocountry_handler.cpp  (+22 more)
src/RESTObjects/: RESTAPI_AnalyticsObjects.cpp  RESTAPI_AnalyticsObjects.h  RESTAPI_CertObjects.cpp  RESTAPI_CertObjects.h  RESTAPI_FMSObjects.cpp  RESTAPI_FMSObjects.h  RESTAPI_GWobjects.cpp  RESTAPI_GWobjects.h  RESTAPI_OWLSobjects.cpp  RESTAPI_OWLSobjects.h  RESTAPI_ProvObjects.cpp  RESTAPI_ProvObjects.h  RESTAPI_SubObjects.h  (+3 more)
templates/: livinlab-radius.json  radius_pools.json
test_scripts/: create_device.sh  delete_capabilities.sh  delete_device.sh  delete_logs.sh  get_capabilities.sh  get_device.sh  get_logs.sh  get_stats.sh  get_status.sh  list_defaultconfigs.sh  list_devices.sh  login.sh  logout.sh  test_logout.sh  update_configuration.sh
(+192 files in other folders)
